--- a/main.html
+++ b/main.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/1ab94d0eba.js" crossorigin="anonymous"></script>
-    <title>Page Submit</title>
+    <title>Frutix</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main class="container">
         <h2>Login</h2>
-        <form action="">
-            <div class="input-field">
+        <form>
+            <div class="input-dados">
                 <input type="text" name="username" id="username"
-                placeholder="Enter your Username">
+                placeholder="Digite seu nome" required>
                 <div class="underline"></div>
             </div>
 
-            <div class="input-field">
+            <div class="input-dados">
                 <input type="password" name="password" id="password"
-                placeholder="Enter your Password">
+                placeholder="Digite sua senha" required>
                 <div class="underline"></div>
             </div>
 
-            <input type="submit" value="Continue">
+            <input id="btn" type="button" value="Entrar">
         </form>
+
+        <div class="footer">
+            <div class="social-redes">
+                <div id="tt">
+                    <a href="https://twitter.com/login?lang=pt" target="black">
+                        <i class="fab fa-twitter"></i>
+                        Sign in with Twitter
+                    </a>
+                </div>
+
+                <div id="ff">
+                    <a href="https://www.facebook.com/" target="black">
+                        <i class="fab fa-facebook"></i>
+                        Sign in with Facebook
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
     </main>
 </body>
 </html>
